--- a/css/style.css
+++ b/css/style.css
@@ -229,3 +229,114 @@ a { text-decoration: none; }
   width: 1535px;
   left: -15.6%;
 }
+.video-box2 {
+  position: absolute;
+  left: -12%;
+  margin-top: 30%;
+}
+.video-box3 {
+  position: absolute;
+  right: -12%;
+  margin-top: 30%;
+}
+.meth {
+  position: relative;
+  width: 100%;
+  height: 719px;
+  width: 1534px;
+  left: 1px;
+}
+.main {
+  position: absolute;
+  bottom: 93%;
+  left: 43.5%;
+  color: white;
+  font-size: 20px;
+  font-family: 'Lobster', cursive;
+}
+.cranst {
+  position: absolute;
+  bottom: 90%;
+  left: 3%;
+  color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 16px;
+}
+.BR {
+  position: absolute;
+  width: 100%;
+  top: 12%;
+  width: 150px;
+  height: 125px;
+  left: 13%;
+}
+.cran {
+  position: absolute;
+  bottom: 70%;
+  left: 3%;
+  color: #007acc;
+  font-size: 15px;
+  width: 150px;
+  font-family: 'Cinzel', serif;
+}
+.bryan {
+  position: absolute;
+  bottom: 42%;
+  left: 3%;
+  color: #007acc;
+  font-size: 15px;
+  width: 350px;
+  font-family: 'Cinzel', serif;
+}
+.sky {
+  position: absolute;
+  bottom: 35%;
+  left: 3%;
+  color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 16px;
+}
+.anna {
+  position: absolute;
+  bottom: 12%;
+  left: 3%;
+  color: #007acc;
+  font-size: 15px;
+  width: 350px;
+  font-family: 'Cinzel', serif;
+}
+.AP {
+  position: absolute;
+  width: 100%;
+  width: 140px;
+  height: 100px;
+  bottom: 74%;
+  right: 7.5%;
+
+}
+.aaron {
+  position: absolute;
+  bottom: 90%;
+  right: 20%;
+  color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 16px;
+}
+.paul {
+  position: absolute;
+  bottom: 73.5%;
+  right: 17%;
+  color: #007acc;
+  width: 150px;
+  font-size: 15px;
+  font-family: 'Cinzel', serif;
+}
+.paul2 {
+  position: absolute;
+  bottom: 51.5%;
+  right: 7.3%;
+  color: #007acc;
+  width: 300px;
+  font-size: 15px;
+  font-family: 'Cinzel', serif;
+}
