--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a { text-decoration: none; }
 .nav-fostrap {
   display: block;
   margin-bottom: 15px 0;
-  background: #03A9F4;
+  background: #029ce3;
   border-radius: 3px;
 }
 
@@ -391,4 +391,53 @@ a { text-decoration: none; }
   width: 350px;
   font-size: 15px;
   font-family: 'Cinzel', serif;
+}
+.show-container {
+  position: relative;
+  max-width: 1170px;
+  margin: 0 auto;
+  width: 100%;
+}
+.walt {
+  position: absolute;
+  width: 100%;
+  height: 720px;
+  width: 1535px;
+  left: -15.6%;
+}
+.intro {
+  position: absolute;
+  top: 45px;
+  left: -8%;
+  font-size: 15px;
+  color: #1B936A;
+  width: 120px;
+  font-family: 'Rubik Mono One', sans-serif;
+}
+.content {
+  position: absolute;
+  font-size: 15px;
+  color: black;
+  width: 450px;
+  top: 95px;
+  left: -14%;
+  font-family: 'Raleway', sans-serif;
+}
+.intro2 {
+  position: absolute;
+  top: 53px;
+  left: 80%;
+  font-size: 15px;
+  color: #1B936A;
+  width: 120px;
+  font-family: 'Rubik Mono One', sans-serif;
+}
+.content2 {
+  position: absolute;
+  font-size: 15px;
+  color: black;
+  width: 450px;
+  top: 95px;
+  left: 76%;
+  font-family: 'Raleway', sans-serif;
 }
