--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ a { text-decoration: none; }
 
 .nav-fostrap {
   display: block;
-  margin-bottom: 15px 0;
   background: #029ce3;
   border-radius: 3px;
 }
@@ -32,13 +31,13 @@ a { text-decoration: none; }
   padding: 0;
   display: inline-block;
   position: relative;
-  font-size: 14;
+  font-size: 14px;
   color: #def1f0;
 }
 
 .nav-fostrap li a {
   padding: 15px  20px;
-  font-size: 14;
+  font-size: 14px;
   color: #def1f0;
   display: inline-block;
   outline: 0;
@@ -156,7 +155,11 @@ a { text-decoration: none; }
   margin: 0 auto;
 }
 .img:hover{
-  transform: rotate(-360deg);
+  -webkit-transform: rotate(-360deg);
+      -ms-transform: rotate(-360deg);
+          transform: rotate(-360deg);
+  -webkit-transition: all 0.7s ease 0.5s;
+  -o-transition: all 0.7s ease 0.5s;
   transition: all 0.7s ease 0.5s; 
 }
 .img {
@@ -164,8 +167,12 @@ a { text-decoration: none; }
   position: absolute;
   width: 180px;
   left: 1%;
+  -webkit-transition: all 0.2s ease 0.3s;
+  -o-transition: all 0.2s ease 0.3s;
   transition: all 0.2s ease 0.3s; 
-  transform: scale(0.8);
+  -webkit-transform: scale(0.8); 
+      -ms-transform: scale(0.8); 
+          transform: scale(0.8);
 }
 .logo {
   z-index: 999;
@@ -178,7 +185,7 @@ a { text-decoration: none; }
   position: absolute;
   width: 100%;
   height: 100%;
-  height: 674px;
+  height: 677px;
   width: 1536px;
 }
 
@@ -239,11 +246,10 @@ a { text-decoration: none; }
   margin-top: 30%;
 }
 .meth {
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 719px;
-  width: 1534px;
-  left: 1px;
+  height: 721px;
+  width: 1536px;
 }
 .main {
   position: absolute;
@@ -454,7 +460,11 @@ a { text-decoration: none; }
   left: -15.6%;
 }
 .fa-facebook-f {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
   top: 260px;
   left: 32%;
   position: absolute;
@@ -462,10 +472,16 @@ a { text-decoration: none; }
   color: #3D58A6;
 }
 .fa-facebook-f:hover {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+          transform: scale(1.5);
 }
 .fa-twitter {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
   top: 260px;
   left: 40.2%;
   position: absolute;
@@ -473,10 +489,16 @@ a { text-decoration: none; }
   color: #38A1F3;
 }
 .fa-twitter:hover {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+          transform: scale(1.5);
 }
 .fa-instagram {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
   top: 260px;
   left: 51.5%;
   position: absolute;
@@ -484,10 +506,16 @@ a { text-decoration: none; }
   color: #00ffff;
 }
 .fa-instagram:hover {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+          transform: scale(1.5);
 }
 .fa-youtube{
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
   top: 260px;
   left: 61.5%;
   position: absolute;
@@ -495,5 +523,7 @@ a { text-decoration: none; }
   color: #ED3833;
 }
 .fa-youtube:hover {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+          transform: scale(1.5);
 }
