--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,12 @@ body {
   font-size: 15px;
   font-family: 'Orbitron', sans-serif;
 }
+
 a { text-decoration: none; }
+
+.audio {
+  display: none;
+}
 
 .container {
   max-width: 1170px;
